--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "jsonwebtoken": "^9.0.1",
     "lodash": "^4.17.21",
     "multer": "^1.4.5-lts.1",
-    "prisma": "^5.1.0"
+    "prisma": "^5.1.0",
+    "web-push": "^3.6.4"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
@@ -31,6 +32,7 @@
     "@types/lodash": "^4.14.196",
     "@types/multer": "^1.4.7",
     "@types/node": "^20.4.5",
+    "@types/web-push": "^3.3.2",
     "nodemon": "^3.0.1",
     "ts-node": "^10.9.1",
     "typescript": "^5.1.6"
