--- a/package.json
+++ b/package.json
@@ -19,13 +19,17 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "graphql": "^16.7.1",
+    "graphql-redis-subscriptions": "^2.6.0",
+    "graphql-subscriptions": "^2.0.0",
+    "graphql-ws": "^5.14.0",
     "http": "^0.0.1-security",
     "https": "^1.0.0",
     "jsonwebtoken": "^9.0.1",
     "lodash": "^4.17.21",
     "multer": "^1.4.5-lts.1",
     "prisma": "^5.1.0",
-    "web-push": "^3.6.4"
+    "web-push": "^3.6.4",
+    "ws": "^8.13.0"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
@@ -35,6 +39,7 @@
     "@types/multer": "^1.4.7",
     "@types/node": "^20.4.5",
     "@types/web-push": "^3.3.2",
+    "@types/ws": "^8.5.5",
     "nodemon": "^3.0.1",
     "ts-node": "^10.9.1",
     "typescript": "^5.1.6"
