--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@apollo/server": "^4.9.0",
+    "@graphql-tools/schema": "^10.0.0",
     "@prisma/client": "^5.1.0",
     "bcrypt": "^5.1.0",
     "body-parser": "^1.20.2",
@@ -21,15 +22,16 @@
     "graphql": "^16.7.1",
     "graphql-redis-subscriptions": "^2.6.0",
     "graphql-subscriptions": "^2.0.0",
-    "graphql-ws": "^5.14.0",
+    "graphql-ws": "^5.14.1",
     "http": "^0.0.1-security",
     "https": "^1.0.0",
+    "ioredis": "^5.3.2",
     "jsonwebtoken": "^9.0.1",
     "lodash": "^4.17.21",
     "multer": "^1.4.5-lts.1",
     "prisma": "^5.1.0",
     "web-push": "^3.6.4",
-    "ws": "^8.13.0"
+    "ws": "^8.14.2"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
