--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "jsonwebtoken": "^9.0.1",
     "lodash": "^4.17.21",
     "multer": "^1.4.5-lts.1",
+    "node-schedule": "^2.1.1",
     "prisma": "^5.1.0",
     "web-push": "^3.6.4",
     "ws": "^8.14.2"
@@ -40,6 +41,7 @@
     "@types/lodash": "^4.14.196",
     "@types/multer": "^1.4.7",
     "@types/node": "^20.4.5",
+    "@types/node-schedule": "^2.1.4",
     "@types/web-push": "^3.3.2",
     "@types/ws": "^8.5.5",
     "nodemon": "^3.0.1",
